--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,10 +30,13 @@ jobs:
           gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
       - uses: actions-rust-lang/setup-rust-toolchain@v1
-
       - uses: korandoru/setup-zig@v1
         with:
           zig-version: master
+
+      - name: install zig-build
+        run: |
+          cargo install cargo-zigbuild
       - uses: anchore/sbom-action/download-syft@v0.18.0
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
